src/app/employer-question/employer-question.component.css
.lhs-content {
  background: #2f2e41;  
}

.rhs-content {
}

.lhs-content,
.rhs-content {
  height: 100vh;
  padding-top: 64px !important; /* this is to allow for the header */
}

.wrap-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  max-height: 600px;
  align-items: stretch;
  justify-content: flex-start;
}
.wrap-container li {
  border: 1px solid gray;
  padding: 5px;
}

